Endpoints errors corrected
