# src/main/java/br/com/devstoblu/scheduEase/controllers/ScheduleController.java
@@ -1,9 +1,9 @@
 package br.com.devstoblu.scheduEase.controllers;
 
-import br.com.devstoblu.scheduEase.models.dtos.ScheduleClientNameEmployeeIdDTO;
 import br.com.devstoblu.scheduEase.models.dtos.ScheduleDTO;
-import br.com.devstoblu.scheduEase.models.dtos.ScheduleDateIdDTO;
 import br.com.devstoblu.scheduEase.services.ScheduleService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,6 +12,7 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
+@Tag(name = "Agenda", description = "Endpoints relacionados a Agenda") // customizando UI do Swagger
 @RestController
 @RequestMapping(value = "/api/schedules")
 public class ScheduleController {
@@ -19,8 +20,9 @@ public class ScheduleController {
     @Autowired
     ScheduleService scheduleService;
 
+    @Operation(description = "Adiciona uma horário", method = "POST")// customizando UI do Swagger
     @PostMapping
-    public ResponseEntity<Object> createAnAppointment( @RequestBody ScheduleDTO scheduleDTO) throws Exception {
+    public ResponseEntity<Object> createAnAppointment(@Valid @RequestBody ScheduleDTO scheduleDTO) throws Exception {
 
         try {
             return ResponseEntity.ok(scheduleService.createAnAppointment(scheduleDTO));
@@ -29,6 +31,7 @@ public class ScheduleController {
         }
     }
 
+    @Operation(description = "Atualiza um horário", method = "PUT")// customizando UI do Swagger
     @PutMapping
     public ResponseEntity<Object> updateAnAppointment(@Valid @RequestBody ScheduleDTO scheduleDTO) throws Exception {
         //Verificando se o horário existe
@@ -49,21 +52,26 @@ public class ScheduleController {
         }
     }
 
+    @Operation(description = "Exclui um horário", method = "DELETE")// customizando UI do Swagger
     @DeleteMapping(value = "/{id}")
     public void deleteAnAppointment(@PathVariable Long id) {
         scheduleService.deleteAnAppointment(id);
     }
 
-    @GetMapping("/list-appointments")
-    public List<ScheduleDTO> listAppointments( @RequestBody ScheduleDateIdDTO dateIdDTO) {
-        return scheduleService.listAppointments(dateIdDTO.getAppointmentDate(), dateIdDTO.getId());
+    @Operation(description = "Lista todos os horários do Funcionário pela data e seu Id", method = "GET")// customizando UI do Swagger
+    @GetMapping(value = "/list-appointments")
+    public List<ScheduleDTO> listAppointments(@RequestParam(name = "appointmentDate") String appointmentDate,
+                                              @RequestParam(name = "id") Long id) {
+        return scheduleService.listAppointments(appointmentDate, id);
     }
 
+    @Operation(description = "Pesquisa um horário pelo nome do Cliente e id do Funcionário", method = "GET")// customizando UI do Swagger
     @GetMapping
-    public ScheduleDTO searchAnAppointment(@Valid @RequestBody ScheduleClientNameEmployeeIdDTO employee) throws Exception {
+    public ScheduleDTO searchAnAppointment(@RequestParam(name = "clientName") String clientName,
+                                           @RequestParam(name = "employeeId") Long employeeId) throws Exception {
 
         try {
-            return scheduleService.searchAnAppointment(employee.getClientName(), employee.getEmployeeId());
+            return scheduleService.searchAnAppointment(clientName, employeeId);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
